# ghost

./: CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
src/empty/: CMakeLists.txt  empty_application.cpp
src/framework/common/: allocator.cpp  allocator.hpp  base_application.cpp  base_application.hpp  graph_manager.cpp  graph_manager.hpp  main.cpp
src/framework/interface/: application.h  application.hpp  runtime_module.h  runtime_module.hpp
src/platform/windows/: ghost_win.c
src/test/: TestApplication.cpp  main_ui.cpp
src/widget/: main_ui.cpp  paint_widget.cpp  paint_widget.h  widget.ui
